# football-project

./: 404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sample.env
.github/workflows/: docs.yml
dbt_football/: dbt_project.yml
dbt_football/models/marts/football_summary/: fbs_competitions__sources.yml
dbt_football/models/staging/football/: fb__sources.yml  stg_fb__teams.sql
docker/airflow/: Dockerfile  docker-compose.override.yml  requirements.txt  sample.env  sample_airflow_settings.yml
docker/airflow/dags/: football_dag.py  football_dag_with_lineage.py  lineage-combine.py  lineage-reporting.py
docker/airflow/dbt/dbt_football/: .user.yml  dbt_project.yml  profiles.yml
docker/airflow/dbt/dbt_football/docs/: homepage.md
docker/airflow/dbt/dbt_football/models/marts/football_summary/: fbs_competitions__sources.yml  mart_fbs__competitions.sql  metricflow_time_spine.sql
docker/airflow/dbt/dbt_football/models/staging/football/: fb__sources.yml  stg_fb__competitions.sql  stg_fb__competitions_standings.sql  stg_fb__competitions_top_scorers.sql  stg_fb__matches_today.sql  stg_fb__players.sql  stg_fb__running_competitions.sql  stg_fb__teams.sql  stg_fb_running_competitions.sql
docker/airflow/include/: constants.py  profiles.py
docker/marquez/docker/: init-db.sh  up.sh
docker/python/: Dockerfile
docker/streamlit/: Dockerfile
docs/: index.md
docs/extraction/: competitions_api.md  matches_api.md  teams_api.md
extraction/competitions_api/: index.html
extraction/matches_api/: index.html
extraction/teams_api/: index.html
search/: search_index.json
src/: main.py
src/contracts/: competitions_contract.py  competitions_standings_contract.py  competitions_top_scorers_contract.py  matches_contract.py  matches_today_contract.py  teams_contract.py
src/utils/: competitions_api.py  database.py  football_api.py  matches_api.py  processor.py  teams_api.py
src/utils/queries/: create_queries.py
src/visualization/: app.py  app_v2.py
src/visualization/pages/: competitions_summary.py  data_quality.py  football_api_data_overview.py  matches_today.py  teams_summary.py
src/visualization/utils/: database.py  gpt_prompt.py
tests/: test_competitions_api.py  test_teams_api.py
tests/fixtures/: mock_responses.py
