[tool.poetry]
name = "football-project"
version = "0.1.0"
description = ""
authors = ["AndreFelippeVidal <andre_vidal@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
ratelimit = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
click = "^8.1.7"
pydantic = "^2.10.2"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
dbt-postgres = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
taskipy = "^1.14.1"


[tool.poetry.group.app.dependencies]
streamlit = "^1.40.2"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.47"
mkdocstrings = "^0.27.0"
mkdocs-exclude = "^1.0.2"
markdown-include = "^0.8.1"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
build_docker_images = "docker build -f docker/python/Dockerfile -t football_image . && docker build -f docker/streamlit/Dockerfile -t streamlit-app ."

